サイドバーフロントの実装

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,18 +1,8 @@
-<div class = "wrapper">
-  <div class = "side">
-    <div class = "side-top">
-    </div>
-    <div class ="side-center">
-    </div>
-      <%= render "side_bar" %>
+<div class="wrapper">
+  <div class="side-bar">
+    <%= render "side_bar" %>
   </div>
-  <div class = "chat">
-    <div class = "chat-top">
-    </div>
-    <div class = "chat-center">
-    </div>
-    <div class = "chat-bottom">
-    </div>
-      <%= render "main_chat" %>
+  <div class="chat">
+    <%= render "main_chat" %>
   </div>
 </div>
