--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,50 @@
+<div class = "chat-top">
+  <div class="left-header">
+    <div class="header-title">
+      hogefuga
+    </div>
+  </div>
+  <div class="right-header">
+    <div class="header-button">
+      <a href="#">チャットを終了する</a>
+    </div>
+  </div>
+</div>
 
-    <div class = "chat-top">
+<div class = "chat-center">
+    <div class = "message">
+         <div class = "upper-message">
+            <div class = "message-name">TOm
+            </div>
+            <div class = "message-time">2021.05.23(sun)
+            </div>
+        </div>
+        <div class = "lower-message">
+            <div class = "message-text">おはよう
+            </div>
+        </div>
     </div>
-    <div class = "chat-center">
+     <div class = "message">
+        <div class = "upper-message">
+            <div class = "message-name">jaen
+            </div>
+            <div class = "message-time">2021.05.19(wed)
+            </div>
+        </div>
+        <div class = "lower-message">
+            <div class = "message-text">やあ
+            </div>
+        </div>
     </div>
-    <div class = "chat-bottom">
+</div>
+
+<div class = "chat-bottom">
+    <div class="form-input">
+        <input placeholder="type a message" class="message-form">
+        <label class="form-image">
+            <span class="image-file">画像</span>
+            <input type="file" class="hidden">
+        </label>
     </div>
+    <input type="submit" value="送信" class="send">
+</div>
