--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,6 +1,6 @@
 <div class = "side-top">
   <div class = "side-name">
-    <a href = "#">TOm</a>
+    <%= link_to current_user.name , edit_user_path(current_user) %>
   </div>
   <div class = "side-build">
     <a href = "#">チャットを作成する</a>
