--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -38,13 +38,13 @@
     </div>
 </div>
 
-<div class = "chat-bottom">
+<%= form_with model: [@room, @message], class: "chat-bottom", local: true do |f| %> 
     <div class="form-input">
-        <input placeholder="type a message" class="message-form">
+        <%= f.text_field :content , class: "message-form", placeholder: "type a message" %>
         <label class="form-image">
             <span class="image-file">画像</span>
-            <input type="file" class="hidden">
+            <%= f.file_field :image, class: "hidden" %>
         </label>
     </div>
-    <input type="submit" value="送信" class="send">
-</div>
+    <%= f.submit "送信", class: "send" %>
+<% end %>
