--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -12,30 +12,7 @@
 </div>
 
 <div class = "chat-center">
-    <div class = "message">
-         <div class = "upper-message">
-            <div class = "message-name">TOm
-            </div>
-            <div class = "message-time">2021.05.23(sun)
-            </div>
-        </div>
-        <div class = "lower-message">
-            <div class = "message-text">おはよう
-            </div>
-        </div>
-    </div>
-     <div class = "message">
-        <div class = "upper-message">
-            <div class = "message-name">jaen
-            </div>
-            <div class = "message-time">2021.05.19(wed)
-            </div>
-        </div>
-        <div class = "lower-message">
-            <div class = "message-text">やあ
-            </div>
-        </div>
-    </div>
+  <%= render partial: "message", collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], class: "chat-bottom", local: true do |f| %> 
